@@ -668,6 +668,7 @@ isc_thread_key_delete
 isc_thread_key_getspecific
 isc_thread_key_setspecific
 isc_thread_setconcurrency
+isc_thread_setname
 isc_time_add
 isc_time_compare
 isc_time_formatISO8601
